--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,11 +30,12 @@ main {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	row-gap: 10%;
+	/* row-gap: 10%; */
 	padding: 60px 8%;
 }
 
 main > .content {
+	padding: 40px 0;
 	display: flex;
 	align-self: center;
 	column-gap: 20px;
@@ -61,6 +62,6 @@ footer {
 
 	main > .content {
 		flex-direction: column;
-		justify-content: space-around;
+		justify-content: space-between;
 	}
 }
